<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_double"
    android:paddingLeft="@dimen/spacing_double"
    android:paddingRight="@dimen/spacing_double"
    android:paddingTop="@dimen/spacing_double"
    tools:showIn="@layout/fragment_payment_form">

    <Button
        android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:drawableLeft="@drawable/ic_photo_camera_black"
        android:drawableStart="@drawable/ic_photo_camera_black"

        style="@style/PaymentScreens.ScanButton"

        android:text="@string/scan_card"

        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"

        android:layout_marginBottom="@dimen/spacing_double" />

    <Button
        android:id="@+id/scan_nfc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:drawableLeft="@drawable/ic_settings_black"
        android:drawableStart="@drawable/ic_settings_black"

        android:drawableRight="@drawable/ic_nfc_black"
        android:drawableEnd="@drawable/ic_nfc_black"

        style="@style/PaymentScreens.ScanButton"

        android:text="@string/activate_nfc_sensor"

        android:paddingLeft="@dimen/spacing_double"
        android:paddingRight="@dimen/spacing_double"

        android:layout_marginBottom="@dimen/spacing_double" />

    <LinearLayout
        android:id="@+id/scan_nfc_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@drawable/selector_nfc_layout"
        android:layout_marginBottom="@dimen/spacing_double">

        <ImageView
            android:layout_weight="0"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginLeft="@dimen/spacing_double"
            android:src="@drawable/ic_info_nfc_black"
            android:contentDescription="@string/content_description"
            />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginLeft="@dimen/spacing_double"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:gravity="center_vertical"
            android:text="@string/nfc_activated"
            />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_owner_support"
        app:errorTextAppearance="@style/PaymentScreens.TextAppearance.ErrorSmallItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:hint="@string/card_owner"
        android:clipToPadding="false"
        android:transitionGroup="true"
        tools:ignore="UnusedAttribute,NewApi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:drawableEnd="@drawable/ic_person_black"
            android:drawableRight="@drawable/ic_person_black"
            android:drawablePadding="@dimen/spacing_double"
            android:hint="@string/card_owner_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords|textNoSuggestions"
            android:maxLength="30"
            android:maxLines="1"
            android:textColorHint="@color/hpf_placeholder"
            android:textSize="@dimen/size_edit_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_number_support"
        app:errorTextAppearance="@style/PaymentScreens.TextAppearance.ErrorSmallItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:hint="@string/card_number"
        android:clipToPadding="false"
        android:transitionGroup="true"
        tools:ignore="UnusedAttribute,NewApi">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:drawableRight="@drawable/ic_credit_card_black"
            android:drawableEnd="@drawable/ic_credit_card_black"
            android:drawablePadding="@dimen/spacing_double"
            android:inputType="number"
            android:textColorHint="@color/hpf_placeholder"
            android:maxLength="23"
            android:digits="0123456789 "
            android:textSize="@dimen/size_edit_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_expiration_support"
            app:errorTextAppearance="@style/PaymentScreens.TextAppearance.ErrorSmallItem"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/actionBarSize"
            android:clipToPadding="false"
            android:hint="@string/card_expiration"
            android:transitionGroup="true"
            tools:ignore="UnusedAttribute,NewApi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_expiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:hint="@string/card_expiration_placeholder"
                android:inputType="number"
                android:digits="0123456789/"
                android:textColorHint="@color/hpf_placeholder"
                android:maxLength="5"
                android:textSize="@dimen/size_edit_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/card_cvv_support"
            app:errorTextAppearance="@style/PaymentScreens.TextAppearance.ErrorSmallItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="?android:attr/actionBarSize"
            android:hint="@string/card_cvv"
            android:clipToPadding="false"
            android:transitionGroup="false"
            tools:ignore="UnusedAttribute,NewApi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/card_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:digits="0123456789"
                android:textColorHint="@color/hpf_placeholder"
                android:maxLength="3"
                android:textSize="@dimen/size_edit_text" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_cvv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/card_cvv_info_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/PaymentScreens.TextAppearance.InfoItem"
            android:text="@string/card_security_code_description_cvv"
            />

        <ImageView
            android:id="@+id/card_cvv_info_src"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description"
            android:src="@drawable/cvc_mv"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_storage_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/card_storage_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:textAppearance="@style/PaymentScreens.TextAppearance.InfoItem"
            android:text="@string/card_storage_switch_description"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/card_storage_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/actionBarSize"
            android:layout_marginLeft="@dimen/spacing_double"
            android:layout_marginStart="@dimen/spacing_double"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            />

    </LinearLayout>

</LinearLayout>